fixed main hero image placement on mobile

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -59,6 +59,7 @@ p {
 
 		&.main {
 			background-image: url('/images/hero.jpg');
+			background-size: cover;
 		    background-position: center center;
 		    background-repeat: no-repeat;
 		}
@@ -75,7 +76,7 @@ p {
 			font-family: 'Didot 96 A', 'Didot 96 B'; font-weight: 500; font-style: italic;
 			letter-spacing: normal; //0.05em;
 			color: #fff;
-			font-size: 1.7rem;
+			font-size: 1.6rem;
 			//font-size: 28px;
 			margin: 5% 0 0 0;
 		}
